<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/yellow"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/discovery"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/DeliveryPost"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/card"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/motorbike" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/delivery"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Profile"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/card"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/resume" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/card"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.516">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/product" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/new_user"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/AddToCart"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/card"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/cart" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/card"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/sales"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />
</androidx.constraintlayout.widget.ConstraintLayout>